Fix alignment in tables for chrome bug.

--- a/PlaneBuilder/page/style.css
+++ b/PlaneBuilder/page/style.css
@@ -119,6 +119,7 @@ td {
 	margin-top:0;
 	margin-bottom:0;
 	max-width: 100%;
+	vertical-align: top;
 }
 
 span {
